Fixed docker settings

--- a/01-reminders/graphql/docker-compose.yml
+++ b/01-reminders/graphql/docker-compose.yml
@@ -14,20 +14,20 @@ services:
     #  - 5672:5672
 
   web:
-    build: ./mainapp
+    image: ynonp/ms-graphql-mainapp:latest
     command: ["/usr/bin/wait-for-it.sh", "rabbitmq:5672", "--", "bundle", "exec", "rails", "s", "-p", "3000", "-b", "0.0.0.0"]
     volumes:
       - ./mainapp:/myapp
     ports:
-      - "3000:3000"
+      - "4400:3000"
     depends_on:
       - rabbitmq
 
   reminders:
-    build: ./reminders
-    command: ["/usr/bin/wait-for-it.sh", "mongo:27017", "--", "/usr/bin/wait-for-it.sh", "rabbitmq:5672", "--", "nodemon", "main.js"]
+    image: ynonp/ms-graphql-reminders:latest
+    command: ["/usr/bin/wait-for-it.sh", "mongo:27017", "--", "/usr/bin/wait-for-it.sh", "rabbitmq:5672", "--", "nodemon", "src/main.js"]
     volumes:
-      - ./reminders:/myapp
+      - ./reminders:/myapp/src
     depends_on:
       - web
       - rabbitmq
