--- a/01-reminders/rest-api/mainapp-rest-api/Dockerfile
+++ b/01-reminders/rest-api/mainapp-rest-api/Dockerfile
@@ -1,6 +1,17 @@
 # syntax=docker/dockerfile:1
 FROM ruby:2.7.2
-RUN apt-get update -qq && apt-get install -y nodejs postgresql-client
+
+SHELL ["/bin/bash", "-o", "pipefail", "-c"]
+
+RUN curl -sL https://deb.nodesource.com/setup_12.x | bash -\
+  && apt-get update -qq && apt-get install -qq --no-install-recommends \
+    nodejs postgresql-client \
+  && apt-get upgrade -qq \
+  && apt-get clean \
+  && rm -rf /var/lib/apt/lists/*\
+  && npm install -g yarn@1
+
+
 WORKDIR /myapp
 COPY Gemfile /myapp/Gemfile
 COPY Gemfile.lock /myapp/Gemfile.lock
