--- a/01-reminders/same-db/docker-compose.yml
+++ b/01-reminders/same-db/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   db:
     image: postgres
     volumes:
-      - ./data/db:/var/lib/postgresql/data
+      - data:/var/lib/postgresql/data
 
     environment:
       - POSTGRES_DB=postgres
@@ -51,3 +51,6 @@ services:
       - web
       - rabbitmq
       - mongo
+
+volumes:
+  data:
